--- a/Package.json
+++ b/Package.json
@@ -7,9 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.7.3"
-  },
+  "express": "^4.18.2",
+  "pg": "^8.7.3",
+  "cors": "^2.8.5",
+  "body-parser": "^1.20.2"
+},
   "author": "Tu Nombre",
   "license": "ISC"
 }
