--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "scripts": {
       "start": "node index.js"
     },
-    "dependencies": {
-      "express": "^4.18.2",
-      "pg": "^8.7.3",
-      "cors": "^2.8.5",
-      "body-parser": "^1.20.2"
-    },
+"dependencies": {
+    "express": "^4.17.1",
+    "cors": "^2.8.5",
+    "body-parser": "^1.19.0",
+    "pg": "^8.5.1",
+    "bcrypt": "^5.0.1"
+  },
     "author": "Tu Nombre",
     "license": "ISC"
   }
